fixed cards layout alignment in Moodle 3.4, fixed restriction message in Remui 3.4 and 3.5

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,6 +50,7 @@
 /* Show two cards per row, when both sidebars open in RemUI
  * when left sidebar and right blocks section open in Boost
 */
+
 @media (max-width:1200px) {
   body.path-course.editing.site-menubar-unfold ul.section.first-section li,
   body.path-course.pinaside.site-menubar-unfold ul.section.first-section li {
@@ -329,6 +330,7 @@ input.ignoredirty.form-control{
 
 #page-course-view-remuiformat ul.cards {
     list-style: none !important;
+    padding: 0;
 }
 
 .wdm-card-completion button.btn-link {
@@ -377,6 +379,7 @@ input.ignoredirty.form-control{
 
 #page-course-view-remuiformat .wdm-section-wrapper {
     list-style-type: none;
+    padding: 0;
 }
 
 #page-course-view-remuiformat .wdm-card-single-section .section-modchooser {
@@ -673,10 +676,14 @@ ul.remui-format-list span.inplaceeditable input {
 #page-course-view-remuiformat .general-single-card .availabilityinfo .tag {
   background-color: #666;
   text-align: left;
+  color: white;
+  display: inline-block;
+  padding: .25rem .4em;
   font-size: 0.9rem;
   font-weight: 400;
   margin-top: 5px;
   line-height: 1.3;
+  border-radius: .215rem;
 }
 
 .w-full {
